--- a/src/app/courses/courses/courses.component.html
+++ b/src/app/courses/courses/courses.component.html
@@ -1,10 +1,8 @@
 <mat-card>
   <mat-toolbar color="primary">Cursos Disponíveis</mat-toolbar>
 
-<table mat-table [dataSource]="courses" class="mat-elevation-z8">
-
-  <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
+  <div *ngIf="courses$ | async as courses; else loading">
+  <table mat-table [dataSource]="courses" class="mat-elevation-z8">
 
   <!-- Name Column -->
   <ng-container matColumnDef="name">
@@ -20,5 +18,12 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+  </table>
+  </div>
+
+  <ng-template #loading>
+    <div class="loading-spinner">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    </div>
+  </ng-template>
 </mat-card>
